--- a/cucumber-html-report/style.css
+++ b/cucumber-html-report/style.css
@@ -70,6 +70,7 @@ img{
   background-color: #F0F0F0;
   border-right:1px solid #C8C8C8 ;
   margin-right:0px;
+  height:100%;
 
 }
 
@@ -79,7 +80,7 @@ img{
     top: 0px;
     bottom: 0;
     left: 0;
-    overflow-y: hidden; 
+    overflow-y: hidden;
   }
   
   #right {
